--- a/templates/characters.html
+++ b/templates/characters.html
@@ -251,7 +251,7 @@
         <p class="card-text"><small class="text-gold">Player: {{ c.player.username }}</small></p>
         {% endif %}
         <div class="d-flex justify-content-between mt-3">
-          <a href="{% url 'characters_edit' c.id %}" class="btn btn-sm btn-warning">Edit</a>
+          <a href="{% url 'character_edit' c.id %}" class="btn btn-sm btn-warning">Edit</a>
           <a href="{% url 'character_delete' c.id %}" class="btn btn-sm btn-danger"
             onclick="return confirm('Are you sure you want to delete this character?');">Delete</a>
         </div>
