--- a/templates/characters.html
+++ b/templates/characters.html
@@ -63,7 +63,7 @@
 
         <!-- Dice Roller in sidebar -->
         <section class="dice-roller-container left-column-dice">
-          <button class="dice-toggle-btn" type="button" onclick="toggleDiceRoller()">🎲 Roll Dice</button>
+          <button class="dice-toggle-btn" type="button" onclick="toggleDiceRoller()"> Roll Dice</button>
           <div id="dice-roller-panel" class="dice-roller-panel">
             <div class="dice-roller-form">
               <div class="dice-select-group">
@@ -86,7 +86,7 @@
                 {% endfor %}
               </div>
               <div class="mt-2">
-                <button class="btn-primary btn-roll-all" type="button" onclick="rollAll()">🎲 Roll All</button>
+                <button class="btn-primary btn-roll-all" type="button" onclick="rollAll()"> Roll All</button>
               </div>
               <div class="dice-results" id="dice-results">
                 <h3>Results</h3>
