correct hamburger icon appearing in screens over 992px

--- a/templates/index.html
+++ b/templates/index.html
@@ -75,7 +75,7 @@
 
       <!-- Text box -->
       <div id="welcome-adventurer-text" class="col-md-5">
-        <div class="p-5" style="background: url(static\images\parchment-texture.jpg);">
+        <div class="p-5">
           <h1><strong>Welcome, Adventurer!</strong></h1><br>
           <p>
             Step into the tavern and explore new adventures with fellow travellers.
