--- a/templates/index.html
+++ b/templates/index.html
@@ -76,19 +76,19 @@
       <!-- Text box -->
       <div id="welcome-adventurer-text" class="col-md-5">
         <div class="p-5">
-          <h1>Welcome, Adventurer!</h1><br>
+          <h1><strong>Welcome, Adventurer!</strong></h1><br>
           <p>
             Step into the tavern and explore new adventures with fellow travellers.
             Feel free to rest, take stock of your party and prepare for your next quest over a tankard or two of my
             finest ale.<br><br>
-            Select the <h6>Characters</h6> option from the menu to create or manage your rosters.<br><br>
-            You can also team up with other adventurers with the <h6>Party</h6> tab and check their overall
+            Select the <strong>Characters</strong> option from the menu to create or manage your rosters.<br><br>
+            You can also team up with other adventurers with the <strong>Party</strong> tab and check their overall
             health or mana levels.<br><br>
             We also cater for Dungeon Masters who can register straight away and keep a watch on the whole party during
-            your quest via the <h6>Sign-up/Log-in</h6>menu tab.<br><br>
-            To return to the bar, just click the <h6>BattleRoster Logo</h6>.<br><br>
+            your quest via the <strong>Sign-up/Log-in</strong>menu tab.<br><br>
+            To return to the bar, just click the <strong>BattleRoster Logo</strong>.<br><br>
             Any problems, or if that fella in the corner is bothering you, just let me know in the
-            <h6>Contact</h6> tab.
+            <strong>Contact</strong> tab.
           </p>
         </div>
       </div>
