--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -8,7 +8,7 @@
 html { scroll-behavior: smooth; }
 
 body {
-  background-color: #1e1e1e;
+  background-color: #2a2a2a;
   color: gold;
   font-family: "Lato", sans-serif;
   min-height: 100vh;
